INDEX MVP COMPLETE, Need final touches, swapping over to JS

--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
 
         <button id="generate" class="btn">Search!</button>
 
+
+        <section id = allsongs>
+          <ul style = "list-style-type: none;">
+            <li id = songsuggestion1>placeholder</li>
+            <li id = songsuggestion2>placeholder</li>
+            <li id = songsuggestion3>placeholder</li>
+            <li id = songsuggestion4>placeholder</li>
+            <li id = songsuggestion5>placeholder</li>
+          </ul>
+
+        </section>
         
     </body>
     
