Added video spot on HTML and linked youtube.js

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section id = displayinfo>
           <ul style = "list-style-type: none;">
             <li id = songsuggestion1>Madeleine - top track should pop up here.</li>
-            <li id = songvideo>Hunter - top track video via youtube should pop up here.</li>
+            <li><iframe id="YouTubeVideo" height="853" width="400" ></iframe>Hunter - top track video via youtube should pop up here.</li>
             <li id = concertevent>Terry - concert should pop up here.</li>
           </ul>
         </section> 
