ticketmaster js swapped to js folder and its individual file, will merge later

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <textarea id="artistinput" class="materialize-textarea"></textarea>
             <label id="textarea1">Find an artist's name!</label>
           </div>
-          <button id="generate" class="btn artistbutton">Search!</button>
+          <button id="artistbuttons" class="btn artistbutton">Search!</button>
           </div>
           <div class="col s6">
             <div class="input-field col s12">
@@ -42,13 +42,13 @@
             <label id="textarea1">Find a song title!</label>
           </div>
         </div>
-        <button id="generate" class="btn titlebutton">Search!</button>
+        <button id="titlebuttons" class="btn titlebutton">Search!</button>
         </div>
         <section id = displayinfo>
           <ul style = "list-style-type: none;">
-            <li id = songsuggestion1>Madeleine - top track should pop up here.</li>
-            <li id = songvideo>Hunter - top track video via youtube should pop up here.</li>
-            <li id = concertevent>Terry - concert should pop up here.</li>
+            <li style="display:none;" id = songsuggestion1>Madeleine - top track should pop up here.</li>
+            <li style="display:none;" id = songvideo>Hunter - top track video via youtube should pop up here.</li>
+            <li style="display:none;" id = concertevent>Terry - concert should pop up here.</li>
           </ul>
         </section> 
 
