--- a/assets/githubindex.html
+++ b/assets/githubindex.html
@@ -37,7 +37,7 @@
     <div class="row">
       <div class="col s12 m5">
        
-          <a href="https://github.com/miss-mad/music-thym">
+          <a href="https://github.com/miss-mad">
         <button class="card-panel hoverable" class="card-panel white">
           <span class="yalink"></span>
           <span class="black-text">Madeleine Harris</span>
@@ -96,7 +96,7 @@
         <div class="row">
           <div class="col s12 m5">
             <div  class="center-align">
-              <a href="https://github.com/HellaHunter">
+              <a href="https://github.com/serraiahjean">
             <button class="card-panel hoverable"  class="card-panel white">
               <span class="yalink"></span>
               <span class="black-text">Serraiah Floyd</span>
