Ticketmaster JS is complete, now merging with LASTFM api from MH

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
                 <li><a href="placeholder" class="whatever">Whatever</a></li>
                 <li><a href="./assets/githubindex.html" class="aboutme">About</a></li>
               </ul>
-              
               </div>
           </nav>
           <br>
@@ -41,22 +40,23 @@
             <div class="input-field col s12">
             <textarea id="titleinput" class="materialize-textarea"></textarea>
             <label id="textarea1">Find a song title!</label>
-
           </div>
         </div>
         <button id="titlebuttons" class="btn titlebutton">Search!</button>
         </div>       
         <a class="btn-small" id="sticky" class="waves-effect waves-light btn">Scroll up</a>
-
         <section id = displayinfo>
           <ul style = "list-style-type: none;">
-            <li id = songsuggestion1>Madeleine - top track should pop up here.</li>
-            <li><iframe id="YouTubeVideo" height="853" width="400" ></iframe>Hunter - top track video via youtube should pop up here.</li>
-            <li id = concertevent>Terry - concert should pop up here.</li>
+            <li id = songsuggestion1></li>
+            <li><iframe id="YouTubeVideo" height="853" width="400" ></iframe></li>
+            <li id = concertevent></li>
+            <li id = concertdate></li>
+            <li id = concertname></li>
+            <li id = venuename></li>
+            <li id = concerturl></li>
           </ul>
         </section> 
 
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./assets/js/script.lastfm.js"></script>
