LOCALSTORAGE: added a lot of code to save both artist search and song title search in one search history dropdown menu with a divider for both categories. the search history dropdown menu is also clickable so that users can re-find what they searched before and see results again

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <ul id="dropdown1" class="dropdown-content">
           <!-- dynamically generate search history list in js to display search history artists and song titles as the list grows -->
           <!-- example of search history item -->
-          <li><a href="#!">artist one</a></li> 
-          
+          <li><a href="#!">Find them again!</a></li>
+          <!-- <li>artist one</li>  -->
         </ul>
       </div>
       <div class="input-field col s4" style="display: flex">
@@ -57,6 +57,7 @@
     </div>
 
     <section id="displayinfo">
+      <div id="lastFMInfo"></div>
       <ul style="list-style-type: none">
         <li id="songsuggestion1"></li>
         <li>
