changed some css and html content for cleaner view

--- a/assets/githubindex.html
+++ b/assets/githubindex.html
@@ -64,7 +64,7 @@
             <span class="yalink"></span>
             <span class="black-text">Terry Kim</span>
             <div class="center-align"></div>
-            <img src="../assets/images/Terry" class="circle">
+            <img src="../assets/images/Terry.jpg" class="circle">
              
              
             <p>"Description Here"</p>
