Complete, doing a new push from different device

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <nav class="responsive-img"> <!--If i remove this, i can make the brand-logo text larger, but it repositions the About us. need a fix here.-->
+    <nav class="responsive-img"> <!--If i remove this, i can make the brand-logo text larger, but it repositions the About us. need a fix here. -->
       <div class="nav-wrapper">
         <a class="brand-logo">&emsp;IT'S MTHSY MUSIC!</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down navlist">
@@ -22,7 +22,8 @@
         </ul>
       </div>
     </nav>
-
+    <div></div>
+    <br>
     <div
       class="row"
       style="display: flex; justify-content: center; align-items: center"
