Search bar fixes, after local storage, merging for css edits

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       >
         <!-- Dropdown Trigger -->
         <a class="dropdown-trigger btn" href="#" data-target="dropdown1" id ="historybutton"
-          >Search History</a
-        >
+          >Search History</a>
 
         <!-- Dropdown Structure -->
         <ul id="dropdown1" class="dropdown-content">
@@ -79,7 +78,7 @@
         <li id="concertdate"></li>
         <li id="concertname"></li>
         <li id="venuename"></li>
-        <a href><li id="concerturl"></li></a>
+        <a li id="concerturl"></a>
       </ul>
     </section>
 
