--- a/index.html
+++ b/index.html
@@ -22,9 +22,16 @@
         </ul>
       </div>
     </nav>
+
+    <ul id="slide-out" class="sidenav">
+      <li>
+        <a href="./assets/githubindex.html" class="aboutme">About Us</a>
+      </li>
+    </ul>
+    <a href="#" data-target="slide-out" class="sidenav-trigger"></a>
+
     <br>
-    <br>
-    <br>
+
     <div
       id="main-content"
       class="row"
@@ -59,8 +66,8 @@
 
     <section class="container" id="displayinfo">
       <div class="row">
-      <div class="card-panel pink lighten-5 col s6" id="lastFMInfo"></div>
-      <ul class="col s6" style="list-style-type: none">
+      <div class="card-panel pink lighten-5 col s12 m6" id="lastFMInfo"></div>
+      <ul class="col s12 m6" style="list-style-type: none">
         <li id="songsuggestion1"></li>
         <li class="video-container">
           <iframe
@@ -74,6 +81,7 @@
         </li>
       </ul>
       </div>
+      <br>
       <ul>
         <li id="concertevent"></li>
         <li id="concertdate"></li>
@@ -88,6 +96,8 @@
       Madeleine Harris, Terry Kim, Hunter O'Neal, Serraiah Floyd, Yohannes
       Anbessa
     </footer>
+
+    <br>
 
     <div id="modal" class="modal">
       <div class="modal-content">
