githubindex edits in addition to merging JS and fixes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <nav> <!--If i remove this, i can make the brand-logo text larger, but it repositions the About us. need a fix here. -->
+    <nav> 
       <div class="nav-wrapper">
         <a id="brand-logo" class="brand-logo">&emsp;IT'S MTHSY MUSIC!</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
