--- a/assets/githubindex.html
+++ b/assets/githubindex.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="githubindex.css">
 
-
-    
+</head>
+<body>   
   <h1>Meet the creators</h1>
       <br>
   <div class="row">
@@ -90,6 +90,6 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-<body>
+
     
 </body>
