localstorage & other bugs: all 3 APIs work when user clicks item in search history; consolidated click listeners; made an error catcher for ticketmaster products data; some cleaning

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
       <div class="input-field col s12 m5" >
         <input id="titleinput" class="materialize-textarea" type="text" />
-        <label id="textarea1" for="titleinput">Find a song title!</label>
+        <f id="textarea1" for="titleinput">Find a song title!</label>
         <button id="titlebuttons" class="btn titlebutton">Search!</button>
       </div>
     </div>
