youtube API: one variable name needed changing to work for song title video

--- a/assets/githubindex.html
+++ b/assets/githubindex.html
@@ -66,7 +66,7 @@
               <span class="black-text">Serraiah Floyd</span>
               <div class="center-align"></div>
               <img src="../assets/images/download.jpg" class="circle">
-              <p>"Top 5 Artists: "</p>
+              <!-- <p>"Top 5 Artists: "</p> -->
             </div>
           </button>
         </div>
@@ -80,7 +80,7 @@
               <span class="black-text">Yohannes Anbessa</span>
               <div class="center-align"></div>
               <img src="../assets/images/Yohannes.jpg" class="circle">
-              <p>"Top 5 Artists: Drake, Future, Young Thug, Gunna, Playboi Carti"</p>
+              <p>"Favorite Top 5 Artists: Drake, Future, Young Thug, Gunna, Playboi Carti"</p>
             </button>
             </div>
         </div>
