about us: added Serraiah's photo and favorite artists; updated screenshots for readme

--- a/assets/githubindex.html
+++ b/assets/githubindex.html
@@ -65,8 +65,8 @@
               <span class="yalink"></span>
               <span class="black-text">Serraiah Floyd</span>
               <div class="center-align"></div>
-              <img src="../assets/images/download.jpg" class="circle">
-              <!-- <p>"Top 5 Artists: "</p> -->
+              <img src="../assets/images/Serraiah.jpg" class="circle">
+              <p>"Favorite Top 5 Artists: Jazmine Sullivan, Brandy, Jekalyn Carr, LMB DG, and CHIKA"</p>
             </div>
           </button>
         </div>
